--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
       run: sudo xcode-select -s /Applications/Xcode.app/Contents/Developer
     - name: Run unit tests
       id: unit-tests
-      run: xcodebuild test -scheme NYCHighSchools -project NYCHighSchools.xcodeproj -destination 'platform=iOS Simulator,OS=17.2,name=iPhone 15 Pro Max' | xcpretty && exit ${PIPESTATUS[0]}
+      run: xcodebuild test -scheme NYCHighSchools -project NYCHighSchools.xcodeproj -destination 'platform=iOS Simulator,name=Any iOS Simulator Device' | xcpretty && exit ${PIPESTATUS[0]}
